chore: add custom domain

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "my-portfolio",
-    "homepage": "https://B0th3r.github.io/portfolio/",
+    "homepage": "http://keshawnbryant.com/",
     "version": "0.0.0",
     "type": "module",
     "scripts": {
